# tere4ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
agents/: __init__.py  base.py  orchestrator.py
agents/analysis/: __init__.py  agent.py
agents/elicitation/: __init__.py  agent.py
agents/specification/: __init__.py  agent.py
agents/validation/: __init__.py  agent.py
api/: __init__.py  job_manager.py  main.py  models.py
api/endpoints/: __init__.py
api/static/: app.js  index.html  styles.css
archive/: AUDIT_REPORT.md  COMPREHENSIVE_VALIDATION_REPORT.md  ENHANCED_PREPROCESSING_V2.md  OPTIMIZATION_PLAN.md  SELF_HEALING_PREPROCESSING.md  agent_incident_preprocess.py  audit_structure.py  check_chapter_iii.py  clear_eu_ai_act_data.py  fix_max_tokens.yaml  incidents.py  ingest_incident.py  initial_requirements.yaml  risk_assessment_instructions.yaml  run_incident_preprocess_aiid.py  text_into_chunks_instructions.yaml  text_sanity.py
archive/old_config/: __init__.py  neo4j_config.py
archive/old_docs/: CLEANUP_REPORT.md  PROJECT_RESTRUCTURE.md  README_old.md  agentic_preprocessing_techniques.md
archive/old_models/: __init__.py  ai_hleg.py  eu_hleg_detailed_mapping.py  hleg_preprocess.py  hleg_regex.py  (+2 more)
data/: ai_hleg.txt  eu_ai_act.txt  eu_ai_act_part_1.txt  eu_ai_act_part_2.txt
docs/: AGENTS.md  ARCHITECTURE.md  DATA_MODELS.md  DEMO_SCENARIOS.md  EXAMPLE_OUTPUTS.md  MCP_SERVER_API.md  REFSQ_SYSTEM_DESCRIPTION.md  TERE4AI_MVP_TASKS.md  improvements_for_mapping.yaml
mcp_server/: __init__.py  server.py
scripts/: setup.sh
tests/: PHASE1_PHASE2_ANALYSIS.md  conftest.py
(+45 files in other folders)
